[metadata]
name = apicheck-package-manager
version = attr: apicheck_package_manager.__version__
description = APICheck package manager
long_description = APICheck package manager
keywords = apicheck, manager, security
license = License :: OSI Approved :: Apache Software License
classifiers =
  'Environment :: Console',
  'Intended Audience :: System Administrators',
  'Intended Audience :: Other Audience',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: POSIX',
  'Programming Language :: Python :: 3.8',
authors = BBVA Labs Team
url = https://github.com/BBVA/apicheck

[options]
zip_safe = False
include_package_data = True
install_requires =
packages = find:

[options.entry_points]
console_scripts =
  acp = package_manager.__main__:main