[metadata]
name = apicheck-package-manager
version = attr: apicheck_package_manager.__version__
description = APICheck package manager
long_description = APICheck package manager
keywords = apicheck, manager, security
license = License :: OSI Approved :: Apache Software License
classifiers =
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: Implementation :: PyPy
authors = BBVA Labs Team
url = https://github.com/BBVA/apicheck

[options]
zip_safe = False
include_package_data = True
install_requires =
packages = find:

[options.entry_points]
console_scripts =
  acp = apicheck_package_manager.__main__:main
